--- a/analyses/org.osate.analysis.security/build.properties
+++ b/analyses/org.osate.analysis.security/build.properties
@@ -1,7 +1,4 @@
-bin.includes = plugin.xml,\
-               icons/,\
-               plugin.properties,\
-               META-INF/,\
+bin.includes = META-INF/,\
                .
 jars.compile.order = .
 source.. = src/
