Use Hari's API for getting eObjects / dependency tweak
Specifically, build against the org.sireum.aadl.osate.awas plugin instead of a jar

--- a/alisa/org.osate.alisa2.view/build.properties
+++ b/alisa/org.osate.alisa2.view/build.properties
@@ -5,5 +5,4 @@ bin.includes = META-INF/,\
                description/,\
                plugin.properties,\
                plugin.xml,\
-               lib/,\
-               lib/awas.jar
+               lib/
