--- a/analyses/org.osate.analysis.security/build.properties
+++ b/analyses/org.osate.analysis.security/build.properties
@@ -1,5 +1,6 @@
 bin.includes = META-INF/,\
                .
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           src-gen/
 output.. = bin/
