--- a/alisa/org.osate.alisa2.view/.classpath
+++ b/alisa/org.osate.alisa2.view/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/awas.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.sireum.aadl.osate"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.sireum.aadl.osate.awas"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
