--- a/alisa/org.osate.alisa2.view/.project
+++ b/alisa/org.osate.alisa2.view/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osate.alisa2.view</name>
+	<name>org.osate.asap.view</name>
 	<comment></comment>
 	<projects>
 	</projects>
