--- a/alisa/org.osate.alisa2.view/plugin.properties
+++ b/alisa/org.osate.alisa2.view/plugin.properties
@@ -1,3 +1,3 @@
-pluginName = org.osate.alisa2.view
+pluginName = org.osate.asap.view
 providerName = Eclipse Modeling Project
 viewpointName = MyViewpoint
