Add menus & handlers for basic views

--- a/alisa/org.osate.asap.view/plugin.properties
+++ b/alisa/org.osate.asap.view/plugin.properties
@@ -1,3 +1,14 @@
 pluginName = org.osate.asap.view
 providerName = Eclipse Modeling Project
 viewpointName = MyViewpoint
+
+
+#
+# Action labels and tooltips
+# 
+
+actionSet.label = ASAP Representations
+
+fundamentals.label = System Safety Fundamentals
+
+containment.label = Component Containment Table
