--- a/alisa/org.osate.asap.view/plugin.xml
+++ b/alisa/org.osate.asap.view/plugin.xml
@@ -10,16 +10,59 @@
   <extension
         point="org.eclipse.sirius.externalJavaAction">
      <javaActions
-           actionClass="org.osate.asap.view.DoFocusAction"
+           actionClass="org.osate.asap.view.handlers.DoFocusAction"
            id="org.osate.asap.view.DoFocusActionID">
      </javaActions>
      <javaActions
-           actionClass="org.osate.asap.view.ForceVariableInitializationAction"
+           actionClass="org.osate.asap.view.handlers.ForceVariableInitializationAction"
            id="org.osate.asap.view.ForceVariableInitializationActionID">
      </javaActions>
      <javaActions
-           actionClass="org.osate.asap.view.ClearFocusAction"
+           actionClass="org.osate.asap.view.handlers.ClearFocusAction"
            id="org.osate.asap.view.ClearFocusActionID">
      </javaActions>
+  </extension>
+  <extension
+        point="org.eclipse.ui.commands">
+     <category
+           id="org.osate.asap.view.category"
+           name="%actionSet.label">
+     </category>
+     <command
+           categoryId="org.osate.asap.view.category"
+           id="org.osate.asap.view.containment"
+           name="%containment.label">
+     </command>
+     <command
+           categoryId="org.osate.asap.view.category"
+           id="org.osate.asap.view.fundamentals"
+           name="%fundamentals.label">
+     </command>
+  </extension>
+  <extension
+        point="org.eclipse.ui.handlers">
+     <handler
+           class="org.osate.asap.view.handlers.ContainmentHandler"
+           commandId="org.osate.asap.view.containment">
+     </handler>
+     <handler
+           class="org.osate.asap.view.handlers.FundamentalsHandler"
+           commandId="org.osate.asap.view.fundamentals">
+     </handler>
+  </extension>
+  <extension
+        point="org.eclipse.ui.menus">
+     <menuContribution
+           allPopups="false"
+           locationURI="menu:org.osate.ui.safetyMenu?after=org.osate.aadl2.errormodel.analysis.unhandledFaults">
+        <command
+              commandId="org.osate.asap.view.containment"
+              style="push">
+        </command>
+        <command
+              commandId="org.osate.asap.view.fundamentals"
+              style="push">
+        </command>
+     </menuContribution>
   </extension>
 </plugin>
