Include model statistics help into built plugin

--- a/analyses/org.osate.modelstats.ui/build.properties
+++ b/analyses/org.osate.modelstats.ui/build.properties
@@ -2,4 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               help/,\
+               html/,\
+               toc_modelStatistics.xml
+bin.excludes = html/.gitignore
+src.includes = help/,\
+               markdown/,\
+               toc_modelStatistics.xml
