Add array range to flow end

--- a/core/org.osate.aadl2.edit/plugin.properties
+++ b/core/org.osate.aadl2.edit/plugin.properties
@@ -943,3 +943,4 @@ _UI_FlowImplementation_inEnd_feature = In End
 _UI_FlowImplementation_outEnd_feature = Out End
 _UI_ModeTransitionInstance_trigger_feature = Trigger
 _UI_AbstractFeatureClassifier_type = Abstract Feature Classifier
+_UI_FlowEnd_arrayRange_feature = Array Range
